--- a/landing copy/features.html
+++ b/landing copy/features.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page | Features</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,900;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="features.css">
     <link rel="stylesheet" href="navbar.css">
-
+    <link rel="stylesheet" href="pricing.css">
 </head>
 <body>
     <nav id="navbar" class="navbar">
@@ -28,15 +28,15 @@
     </nav>
     <section class="features">
         <div class="conteiner">
-        <header>
-            <h1>Awesome Features</h1>
-            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, at.</h2>
-    </header>
+            <header>
+                <h1>Awesome Features</h1>
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, at.</h2>
+            </header>
         <div class="row">
             <ul>
                 <li>
                     <h3>RESPONSIVE DESIGN</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, praesentium sunt eos molestias nesciunt ea. Quae similique amet rerum nulla?</p>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo perspiciatis, dolore consequuntur magnam sapiente dolorem quibusdam incidunt necessitatibus quae.</p>
                 </li>
                 <li>
                     <h3>BOOTSTRAP 4</h3>
@@ -64,6 +64,78 @@
             </ul>
         </div>
     </div>  
+    </section>
+    <section class="pricing">
+        <header>
+            <h1>Plans & Pricing</h1>
+            <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+        </header>
+        <div class="cont">
+            <div class="consolidation">
+                <div class="basic">
+                    <h3>
+                        Basic<br>
+                        $49/Month
+                    </h3>
+                    <p>Appico Pricing Table Design.</p>
+                    <hr>
+                    <ul>
+                        <li>1 User</li>
+                        <li>1 Dashboard</li>
+                        <li>5 Projects</li>
+                        <li>Custom Domain</li>
+                    </ul>
+                    <a href="">Purchare</a>
+                </div>
+                <div class="buisenes">
+                    <h3>
+                        Buisenes<br>
+                        $99/Month
+                    </h3>
+                    <p>Appico Pricing Table Design.</p>
+                    <hr>
+                    <ul>
+                        <li>1 User</li>
+                        <li>1 Dashboard</li>
+                        <li>5 Projects</li>
+                        <li>Custom Domain</li>
+                    </ul>
+                    <a href="">Purchare</a>
+                </div>
+            </div>
+            <div class="consolidation">
+                <div class="premium">
+                    <h3>
+                        Premium<br>
+                        $149/Month
+                    </h3>
+                    <p>Appico Pricing Table Design.</p>
+                    <hr>
+                    <ul>
+                        <li>1 User</li>
+                        <li>1 Dashboard</li>
+                        <li>5 Projects</li>
+                        <li>Custom Domain</li>
+                    </ul>
+                    <a href="">Purchare</a>
+                </div>
+                <div class="ultimate">
+                    <h3>
+                        Ultimate<br>
+                        $199/Month
+                    </h3>
+                    <p>Appico Pricing Table Design.</p>
+                <hr>
+                    <ul>
+                        <li>1 User</li>
+                        <li>1 Dashboard</li>
+                        <li>5 Projects</li>
+                        <li>Custom Domain</li>
+                    </ul>
+                    <a href="">Purchare</a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
