--- a/start/index.html
+++ b/start/index.html
@@ -96,7 +96,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link caption-text link-lg" href="#"><i class="bi bi-search"></i></a>
+                  <a class="nav-link link-lg" href="#"><i class="bi bi-search"></i></a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -153,8 +153,8 @@
                 <p class="fst-italic">It’s always good time for sweets! Made with care and prepared with love, our sweets are all you might need to make every day special. Find your favorite now. </p>
 
                 <div>
-                  <button type="button" class="btn btn-lg btn-dark">Dicover</button>
-                  <button type="button" class="btn btn-lg btn-outline-warning">Shop Now</button>
+                  <a href="" class="btn btn-primary">Discover</a>
+                  <a href="" class="btn btn-outline-secondary">Shop Now</a>
                 </div>
               </div>
             </div>
@@ -170,8 +170,8 @@
                 <p class="fst-italic">It’s always good time for sweets! Made with care and prepared with love, our sweets are all you might need to make every day special. Find your favorite now. </p>
 
                 <div>
-                  <button type="button" class="btn btn-lg btn-outline-dark">Dicover</button>
-                  <button type="button" class="btn btn-lg btn-outline-warning">Shop Now</button>
+                  <a href="" class="btn btn-primary">Discover</a>
+                  <a href="" class="btn btn-outline-secondary">Shop Now</a>
                 </div>
               </div>
             </div>
@@ -187,8 +187,8 @@
                 <p class="fst-italic">It’s always good time for sweets! Made with care and prepared with love, our sweets are all you might need to make every day special. Find your favorite now. </p>
 
                 <div>
-                  <a href="#" class="btn btn-lg btn-outline-primary">Dicover</a>
-                  
+                  <a href="" class="btn btn-primary">Discover</a>
+                  <a href="" class="btn btn-outline-secondary">Shop Now</a>
                 </div>
               </div>
             </div>
@@ -233,9 +233,30 @@
         <div class="parallax__group">
         </div>
       
-        <section>
-          <img src="assets/images/h1-slide-4.jpg" alt="">
+        <section class="section-story">
+          <img src="assets/images/section-1.jpg" alt="">
+          <div class="caption-story">
+                <span class="caption-text">Lovly fruit</span>
+                <h5 class="caption-h">Biscuits</h5>
+                <div>
+                  <img src="assets/images/2.png" class="caption-slide" alt="">
+                </div>
+                <p class="fst-italic">It’s always good time for sweets! Made with care and prepared with love, our sweets are all you might need to make every day special. Find your favorite now. </p>
+          </div>
         </section>
+        <div class="parallax__group--2">
+          <!-- <div class="parallax-text">
+            <h5 class="caption-text">If there's no chocolate in Heaven, I'm not going.</h5>
+          </div> -->
+          <div class="parallax__layer parallax__layer--back">
+            <img src="assets/images/h1-parallax-2-1.jpg" alt="">
+          </div>
+          <div class="parallax__layer parallax__layer--base">
+            <h5 class="caption-text">If there's no chocolate in Heaven, I'm not going.</h5>
+          </div>
+        </div>
+        <div class="parallax__group">
+        </div>
 
       </div>
 
