--- a/dol-landing/index.html
+++ b/dol-landing/index.html
@@ -303,15 +303,57 @@
           </div>
     </section> 
 
-    <section class="section-photo">
+    <section class="section-folio">
 
-        <div class="photo"><a href=""><img src="assets/images/section-photo-1.jpg" alt=""></a></div>
-        <div class="photo"><a href=""><img src="assets/images/section-photo-2.jpg" alt=""></a></div>
-        <div class="photo"><a href=""><img src="assets/images/section-photo-3.jpg" alt=""></a></div>
-        <div class="photo"><a href=""><img src="assets/images/section-photo-4.jpg" alt=""></a></div>
-        <div class="photo"><a href=""><img src="assets/images/section-photo-5.jpg" alt=""></a></div>
-        <div class="photo"><a href=""><img src="assets/images/section-photo-6.jpg" alt=""></a></div>
-        <div class="photo"><a href=""><img src="assets/images/section-photo-7.jpg" alt=""></a></div>
+      <figure>
+        <img src="assets/images/section-photo-1.jpg" alt="">
+        <figcaption>
+          <h3>CREAM TART</h3>
+          <p class="fst-italic"> <a href="">Wedding Cakes</a> </p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="assets/images/section-photo-2.jpg" alt="">
+        <figcaption>
+          <h3>FRUIT CAKES</h3>
+          <p class="fst-italic"> <a href="">Wedding Cakes</a> </p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="assets/images/section-photo-3.jpg" alt="">
+        <figcaption>
+          <h3>PEAR CAKE</h3>
+          <p class="fst-italic"> <a href="">Wedding Cakes</a> </p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="assets/images/section-photo-4.jpg" alt="">
+        <figcaption>
+          <h3>BERRY PIE</h3>
+          <p class="fst-italic"> <a href="">Wedding Cakes</a> </p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="assets/images/section-photo-5.jpg" alt="">
+        <figcaption>
+          <h3>TIRAMISU</h3>
+          <p class="fst-italic"> <a href="">Wedding Cakes</a> </p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="assets/images/section-photo-6.jpg" alt="">
+        <figcaption>
+          <h3>PEACH PIE</h3>
+          <p class="fst-italic"> <a href="">Wedding Cakes</a> </p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="assets/images/section-photo-7.jpg" alt="">
+        <figcaption>
+          <h3>CHOCO ROLL</h3>
+          <p class="fst-italic"> <a href="">Wedding Cakes</a> </p>
+        </figcaption>
+      </figure> 
 
     </section>
 
